Fix spacing btw footer and div line when the footer breaks on multiple lines.

--- a/scss/partials/_expanded_post.scss
+++ b/scss/partials/_expanded_post.scss
@@ -128,7 +128,7 @@ div.expanded-post {
 
   div.expanded-post-footer {
     margin-top: 24px;
-    height: 26px;
+    min-height: 26px;
 
     div.is-comments {
       margin-right: 16px;
